--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
+config.json
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
