--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Logs
+.idea
 logs
 *.log
 npm-debug.log*
@@ -30,6 +31,7 @@ bower_components
 .lock-wscript
 
 config.json
+.config.json
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
